add: dialogflow-fulfillment

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dialogflow-fulfillment": "^0.6.1",
     "express": "^4.17.1",
     "firebase-admin": "^9.12.0"
   }
