--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "firebase",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./app/web.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -12,6 +12,7 @@
   "dependencies": {
     "dialogflow-fulfillment": "^0.6.1",
     "express": "^4.17.1",
-    "firebase-admin": "^9.12.0"
+    "firebase-admin": "^9.12.0",
+    "puppeteer": "^10.4.0"
   }
 }
