--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "firebase",
   "version": "1.0.0",
   "description": "",
-  "main": "./app/web.js",
+  "main": "./app/app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
