--- a/package.json
+++ b/package.json
@@ -12,8 +12,6 @@
   "dependencies": {
     "dialogflow-fulfillment": "^0.6.1",
     "express": "^4.17.1",
-    "axios": "0.19.2",
-    "firebase-admin": "^9.12.0",
-    "puppeteer": "^10.4.0"
+    "axios": "0.19.2"
   }
 }
